# PasswordManager

./: package-lock.json  package.json  shell.nix  tsconfig.json
.github/workflows/: build.yml
src/: App.tsx  index.html  main.js
src-tauri/: .gitignore  Cargo.toml  build-for-linux.sh  build-for-windows.sh  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/: breadcrumb.tsx  dialog.tsx  hover-card.tsx  label.tsx  scroll-area.tsx
src/styles/: globals.css
